<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Kotlin</string>
    <string name="app_desc">Twitter Search | iBacor</string>

    <string name="text_search_type">Search Type</string>
    <string name="text_result_type">Result Type</string>
    <string name="text_search_result">Search Result</string>
    <string name="text_search_count">Total %d</string>
    <string name="text_posted">Posted %1$s</string>

    <string name="hint_search_text">Search Text</string>
    <string name="hint_search_page">Page Number</string>

    <string name="button_search">Search</string>

    <string name="message_search">Searching&#8230;</string>

    <string name="error_failed">Failed to Get Result</string>
    <string name="error_unknown">Unknown Error Occurred</string>
</resources>