<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rl_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                tools:targetApi="LOLLIPOP">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_main"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                style="@style/AppTheme.TextInputLayoutHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/hint_search_text"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/bg_text_cursor"
                    android:textSize="14sp"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_search_type"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>

            <Spinner
                android:id="@+id/sp_main_type"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorAccent"
                android:entries="@array/search_types"
                android:spinnerMode="dropdown"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_result_type"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>

            <Spinner
                android:id="@+id/sp_main_result"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorAccent"
                android:entries="@array/result_types"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn"
        android:enabled="false"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:stateListAnimator="@null"
        android:text="@string/button_search"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>
</RelativeLayout>