<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context="com.baculsoft.kotlin.android.views.main.MainActivity"
    tools:targetApi="LOLLIPOP">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/abl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:subtitleTextAppearance="@style/AppTheme.ToolbarSubtitle"
                app:theme="@style/AppTheme.Toolbar"
                app:titleTextAppearance="@style/AppTheme.ToolbarTitle" />
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/abl_main"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    style="@style/AppTheme.TextInputLayoutHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/AppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_main_query"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/hint_search_text"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryDark"
                        android:textCursorDrawable="@drawable/bg_text_cursor"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/AppTheme.TextInputLayoutHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:hintTextAppearance="@style/AppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_main_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/hint_search_page"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="9"
                        android:textColor="@color/colorPrimaryDark"
                        android:textCursorDrawable="@drawable/bg_text_cursor"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/text_search_type"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/sp_main_type"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:entries="@array/search_types"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/text_result_type"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/sp_main_result"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:entries="@array/result_types"
                    android:spinnerMode="dropdown" />

                <Button
                    android:id="@+id/btn_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_btn"
                    android:enabled="false"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_search"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>